<resources>
    <string name="app_name">Our Grocery</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="noAccount">Not have Account? Register</string>
    <string name="recoverPassword">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="registerUser">Register User</string>
    <string name="fullName">Full Name</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="completeAddress">Complete Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="areYouASeller">Are you a Seller? Register as Seller</string>
    <string name="registerSeller">Register Seller</string>
    <string name="shopName">Shop Name</string>
    <string name="deliveryFee">Delivery Fee</string>
    <string name="name">Name</string>
    <string name="editProfile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="shopOpen">Shop Open</string>
    <string name="addProduct">Add Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="discountPrice">Discount Price</string>
    <string name="discountNote">Discount Note e.g 10% Off</string>
    <string name="quantity">Quantity e.g. kg, g etc.</string>
    <string name="discount">Discount</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="showingAll">Showing All</string>
    <string name="promotionCodes">Promotion Codes</string>
    <string name="addPromotionCodes">Add Promotion Code</string>
    <string name="promoCode">Promotion Code</string>
    <string name="promoDescription">Promotion Description</string>
    <string name="promoPrice">Promotion Price</string>
    <string name="minOrderPrice">Minimum Order Price</string>
    <string name="expireDate">Expire Date</string>
    <string name="add">ADD</string>
    <string name="productDetails">Product Details</string>
    <string name="updateProduct">Update Product</string>
    <string name="editProduct">Edit Product</string>
    <string name="shops">Shops</string>
    <string name="addToCart">Add To Cart</string>
    <string name="orderTo">Order To</string>
    <string name="confirmOrder">Confirm Order</string>
    <string name="itemTitle">Item Title</string>
    <string name="itemPrice">Item Price</string>
    <string name="remove">Remove</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderedItems">Ordered Items</string>
    <string name="writeReview">Write Review</string>
</resources>