<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.RegisterUserActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_white"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/registerUser"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <ImageButton
            android:id="@+id/gpsBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_gps_white"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_key_white"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iconIv"
        android:layout_centerHorizontal="true"
        app:c_border="true"
        app:c_border_color="@color/colorPrimary"
        app:c_border_width="1dp"
        android:src="@drawable/ic_person_gray"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_below="@+id/profileIv"
        android:hint="@string/fullName"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_person_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textPersonName|textCapWords"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_person_gray" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_below="@+id/nameEt"
        android:hint="@string/phone"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_phone_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="phone"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_phone_gray" />

    <LinearLayout
        android:id="@+id/addressLl"
        android:layout_margin="5dp"
        android:layout_below="@id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/countryEt"
            android:hint="@string/country"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPostalAddress"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableLeft="@drawable/ic_location_gray" />
        <EditText
            android:id="@+id/stateEt"
            android:hint="@string/state"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPostalAddress"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableLeft="@drawable/ic_location_gray" />
        <EditText
            android:id="@+id/cityEt"
            android:hint="@string/city"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPostalAddress"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableLeft="@drawable/ic_location_gray" />
    </LinearLayout>

    <EditText
        android:id="@+id/addressEt"
        android:layout_below="@+id/addressLl"
        android:hint="@string/completeAddress"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_location_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textPostalAddress|textImeMultiLine"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_location_gray" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_below="@+id/addressEt"
        android:hint="@string/email"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_mail_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_mail_gray" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_below="@+id/emailEt"
        android:hint="@string/password"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_lock_gray" />
    <EditText
        android:id="@+id/cPasswordEt"
        android:layout_below="@+id/passwordEt"
        android:hint="@string/confirmPassword"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_rect02"
        android:drawableLeft="@drawable/ic_lock_gray" />

    <Button
        android:id="@+id/registerBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cPasswordEt"
        android:layout_centerHorizontal="true"
        android:minWidth="120dp"
        android:text="@string/register"
        app:backgroundTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/registerSellerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/areYouASeller"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>